--- a/css/styles.css
+++ b/css/styles.css
@@ -19,5 +19,19 @@
     padding-right: 50px;
     padding-bottom: 10px;
     padding-top: 10px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+
+/*Change this for over all theme*/
+#bodyID{
+    background-color: #2F3C7E;
+    font-family: 'Courier New', Courier, monospace;
+    color: #FBEAEB;
+}
+
+#titleID{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration-line: underline;
+    text-decoration-thickness: 2px;
 }
