--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,12 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
+/*For appropriate image sizing*/
+img{
+    max-width:100%;
+    max-height:100%;
+}
+
 
 /*Change this for over all theme*/
 #bodyID{
