--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,15 @@
-.Loaded{
+.centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /*width: 50%;*/
+}
+
+.heightToFit {
+    height: 400px;
+}
+
+.Loaded {
     align-content: justify;
     overflow: hidden;
     scroll-margin-inline: yes;
@@ -7,37 +18,36 @@
     padding-left: 50px;
     padding-right: 50px;
     font-size: larger;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style: italic;
-    word-break: break-all;   
+    word-break: break-all;
 }
 
-.post{
+.post {
     border: 2px solid;
     scroll-margin-inline: yes;
     padding-left: 50px;
     padding-right: 50px;
     padding-bottom: 10px;
     padding-top: 10px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
-/*For appropriate image sizing*/
-img{
-    max-width:100%;
-    max-height:100%;
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 
 /*Change this for over all theme*/
-#bodyID{
+#bodyID {
     background-color: #2F3C7E;
     font-family: 'Courier New', Courier, monospace;
     color: #FBEAEB;
 }
 
-#titleID{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+#titleID {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration-line: underline;
     text-decoration-thickness: 2px;
 }
